# TicTacToe-CX

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  blueprint.txt
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
building-scripts/: README.md  build-windows-from-linux.sh  install-linux.sh  install-macos.sh  install-termux.sh  install-windows.ps1  run-termux.sh
config/: config.ini
saves/: highscores.txt
src/: achievements.c  achievements.h  ai.c  ai.h  app_meta.h  cli.c  cli.h  game.c  game.h  gui.c  gui.h  internet.c  internet.h  main.c  network.c  network.h  replay.c  replay.h  sound.c  sound.h  utils.c  utils.h
update-scripts/: README.md  update-linux.sh  update-macos.sh  update-termux.sh  update-windows.ps1
